[package]
name = "edge-webview"
version = "0.1.0"
authors = ["tensor-programming <abeltensor@tensor-programming.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
	"edgehtml",
    "winit",
]
edgehtml = ["winrt", "winapi/roapi", "winapi/winerror"]
mshtml = []

[dependencies]
lazy_static = "1.3.0"
include_dir = "0.2.1"
webview-sys = { path = "sys", version = "0.1.0" }
webview_api = {path="api", version = "0.1.0"}


[dependencies.winit]
version = "0.20.0-alpha1"
optional = true

[target."cfg(target_os = \"windows\")".dependencies.winapi]
version = "0.3.7"
optional = true

[target."cfg(target_os = \"windows\")".dependencies.winrt]
version = "0.6.0"
features = ["windows-web"]
optional = true
